--- a/rpg.html
+++ b/rpg.html
@@ -34,7 +34,7 @@
             <input type="button" value="Tentar crítico"
             onclick="defensor.critico(atacante)" class="critico">
         </main>
-        <img src="PF_Ken(2).gif" alt="" class="personagem">
+        <img src="sagat.gif" alt="" class="personagem">
         <main id="player2"> 
             <h2 id="nomep2" class="nome">Nome</h2>
             <h2 id="hpp2" class="hp">HP 100/100</h2>
@@ -60,7 +60,7 @@
         <input type="button" value="Tentar crítico"
         onclick="atacante.critico(defensor)" class="critico">
     </main>
-        <img src="PF_Ken.gif" alt="" class="personagem2">
+        <img src="blanka.gif" alt="" class="personagem2">
     </div>
 </body>
 </html>
