--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <input type="button" value="Tentar crítico"
         onclick="atacante.critico(defensor)" class="critico">
     </main>
-        <img src="blanka.gif" alt="" class="personagem2">
+        <img src="blanka.gif" style="transform: scaleY(-1);" alt="" class="personagem2">
     </div>
 </body>
 </html>
