--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h2 id="hpp1" class="hp">HP 100/100</h2>
             <h2 id="atkp1" class="atk">Atk:</h2>
             <h2 id="defp1" class="def">Def:</h2>
+            <script src="rpg.js"></script>
             <input type="button" value="Ataque"
             onclick="defensor.slash(atacante)" class="slash">
             <input type="button" value="Small Health Potion"
