--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
             <h2 id="hpp2" class="hp">HP 100/100</h2>
             <h2 id="atkp2" class="atk">Atk:</h2>
             <h2 id="defp2" class="def">Def:</h2>
-        <script src="rpg.js"></script>
         <input type="button" value="Ataque"
         onclick="atacante.slash(defensor)" class="slash">
         <input type="button" value="Small Health Potion"
@@ -61,7 +60,7 @@
         <input type="button" value="Tentar crítico"
         onclick="atacante.critico(defensor)" class="critico">
     </main>
-        <img src="blanka.gif" style="transform: scaleY(-1);" alt="" class="personagem2">
+        <img src="blanka.gif" style="transform: scaleX(-1);" alt="" class="personagem2">
     </div>
 </body>
 </html>
